# us-census

./: .gitignore  .local.env  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  compose.yml
migrations/001/: down.sql  up.sql
src/: constraints.rs  fetch_api_metadata.rs  lib.rs  main.rs  models.rs  parse_geography.rs  parse_variables.rs  schema.rs
