[package]
name = "us_census"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = ">=0.11,<1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = ">=0.15"
diesel = { version = ">=2.2", features = ["postgres", "chrono"] }
regex = ">=1.11"
url = "2"
chrono = { version = ">=0.4.40", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
rstest = ">=0.24.0"
